# cdp_data_engineering

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: architecture_diagram.html  architecture_diagrams.html  mermaid.md  presentation.md
src/cli/: pipeline_generator.py
src/common/: logging_config.py  metrics.py
src/ingestion/: clickstream_consumer.py  email_webhook.py  format_normalizer.py  kafka_producer.py  mobile_app_consumer.py  salesforce_connector.py  twilio_webhook.py
src/ml/: embedding_generator.py  pinecone_manager.py  vertex_feature_store.py
src/orchestration/: cdp_dag.py
src/privacy/: consent_manager.py  gdpr_deletion.py
src/processing/: identity_resolution.py  profile_builder.py  stream_processor.py
src/quality/: data_quality_checks.py
src/serving/: profile_api.py  reverse_etl.py  segmentation_engine.py
src/storage/: bigquery_loader.py  mongodb_profile_store.py
src/storage/models/: customer_profile.py
tests/integration/: test_placeholder.py
tests/quality/: test_placeholder.py
tests/unit/: test_identity_resolution.py
