[project]
name = "cdp-data-engineering"
version = "1.0.0"
description = "Customer Data Platform for EdTech"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "motor.*",
    "confluent_kafka.*",
    "simple_salesforce.*",
    "twilio.*",
    "great_expectations.*",
    "pinecone.*",
    "vertexai.*",
    "spacy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker services)",
    "slow: Slow tests (load testing, etc.)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
