[project]
name = "cdp-data-engineering"
version = "1.0.0"
description = "Customer Data Platform for EdTech"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "T20"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "motor.*",
    "confluent_kafka.*",
    "simple_salesforce.*",
    "twilio.*",
    "great_expectations.*",
    "pinecone.*",
    "vertexai.*",
    "spacy.*",
    "airflow.*",
    "google.cloud.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.orchestration.*",
    "src.ml.*",
    "src.quality.*",
    "src.ingestion.salesforce_connector",
]
disallow_untyped_defs = false
disable_error_code = ["no-any-return", "attr-defined", "call-arg", "arg-type", "import-untyped", "import-not-found"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker services)",
    "slow: Slow tests (load testing, etc.)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B603", "B607", "B404"]
